@@ -15,10 +15,62 @@ import java.io.InputStream;
 import java.net.HttpURLConnection;
 import java.net.URL;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Set;
+import java.util.regex.Pattern;
 
 @CapacitorPlugin(name = "NativeShell")
 public class NativeShellPlugin extends Plugin {
+
+    // Command allowlist for security
+    private static final Set<String> ALLOWED_COMMANDS = new HashSet<>(Arrays.asList(
+        "ls", "cat", "echo", "pwd", "whoami", "date", "uname",
+        "df", "du", "ps", "top", "free", "uptime", "which"
+    ));
+
+    // Package manager allowlist
+    private static final Set<String> ALLOWED_PACKAGE_MANAGERS = new HashSet<>(Arrays.asList(
+        "pkg", "apt-get", "pacman", "yum"
+    ));
+
+    // Dangerous character pattern for validation
+    private static final Pattern DANGEROUS_CHARS = Pattern.compile("[;&|`$<>(){}\\[\\]\\n\\r]");
+
+    /**
+     * Validates that a command is safe to execute
+     */
+    private boolean isCommandAllowed(String command) {
+        if (command == null || command.isEmpty()) {
+            return false;
+        }
+        
+        // Check if command is in allowlist
+        String baseCommand = command.split("\\s+")[0];
+        if (!ALLOWED_COMMANDS.contains(baseCommand)) {
+            return false;
+        }
+        
+        // Check for dangerous characters
+        if (DANGEROUS_CHARS.matcher(command).find()) {
+            return false;
+        }
+        
+        return true;
+    }
+
+    /**
+     * Validates arguments for dangerous characters
+     */
+    private boolean areArgumentsSafe(List<String> args) {
+        for (String arg : args) {
+            if (arg != null && DANGEROUS_CHARS.matcher(arg).find()) {
+                return false;
+            }
+        }
+        return true;
+    }
 
     @PluginMethod
     public void executeCommand(PluginCall call) {
@@ -30,7 +82,27 @@ public class NativeShellPlugin extends Plugin {
             return;
         }
 
+        // Security validation
+        if (!isCommandAllowed(command)) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Command not allowed. Only safe commands are permitted.");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
+        if (!areArgumentsSafe(args)) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Invalid arguments. Arguments contain forbidden characters.");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
         try {
+            // Use ProcessBuilder with proper argument separation (prevents injection)
             List<String> fullCommand = new ArrayList<>();
             fullCommand.add(command);
             fullCommand.addAll(args);
@@ -68,16 +140,43 @@ public class NativeShellPlugin extends Plugin {
             return;
         }
 
+        // Security validation - stricter for root commands
+        if (!isCommandAllowed(command)) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Root command not allowed. Only safe commands are permitted.");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
+        if (!areArgumentsSafe(args)) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Invalid arguments. Arguments contain forbidden characters.");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
         try {
-            // Build su command
-            StringBuilder fullCommand = new StringBuilder("su -c \"");
-            fullCommand.append(command);
-            for (String arg : args) {
-                fullCommand.append(" ").append(arg);
-            }
-            fullCommand.append("\"");
+            // Use ProcessBuilder to prevent command injection
+            // Build command array properly instead of string concatenation
+            List<String> commandList = new ArrayList<>();
+            commandList.add("su");
+            commandList.add("-c");
             
-            Process process = Runtime.getRuntime().exec(fullCommand.toString());
+            // Build the inner command safely
+            StringBuilder innerCommand = new StringBuilder(command);
+            for (String arg : args) {
+                // Escape single quotes and wrap in quotes for safety
+                String escapedArg = arg.replace("'", "'\\''");
+                innerCommand.append(" '").append(escapedArg).append("'");
+            }
+            commandList.add(innerCommand.toString());
+            
+            ProcessBuilder pb = new ProcessBuilder(commandList);
+            Process process = pb.start();
             
             String output = readStream(process.getInputStream());
             String error = readStream(process.getErrorStream());
@@ -108,31 +207,62 @@ public class NativeShellPlugin extends Plugin {
             return;
         }
 
+        // Validate package name - only alphanumeric, dash, underscore
+        if (!packageName.matches("^[a-zA-Z0-9_-]+$")) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Invalid package name. Only alphanumeric characters, dashes, and underscores are allowed.");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
         try {
-            String installCommand;
+            String packageManager;
+            String installCmd;
             
             // Determine package manager based on source
             switch (source) {
                 case "apt":
                 case "ubuntu":
                 case "debian":
-                    installCommand = "apt-get install -y " + packageName;
+                    packageManager = "apt-get";
+                    installCmd = "install -y";
                     break;
                 case "pacman":
                 case "arch":
-                    installCommand = "pacman -S --noconfirm " + packageName;
+                    packageManager = "pacman";
+                    installCmd = "-S --noconfirm";
                     break;
                 case "yum":
                 case "rpm":
-                    installCommand = "yum install -y " + packageName;
+                    packageManager = "yum";
+                    installCmd = "install -y";
                     break;
                 default:
                     // Auto-detect or use pkg (Termux-style)
-                    installCommand = "pkg install -y " + packageName;
+                    packageManager = "pkg";
+                    installCmd = "install -y";
                     break;
             }
+
+            if (!ALLOWED_PACKAGE_MANAGERS.contains(packageManager)) {
+                JSObject result = new JSObject();
+                result.put("output", "");
+                result.put("error", "Package manager not allowed");
+                result.put("exitCode", 1);
+                call.resolve(result);
+                return;
+            }
             
-            Process process = Runtime.getRuntime().exec("su -c \"" + installCommand + "\"");
+            // Use ProcessBuilder for safe command execution
+            List<String> commandList = new ArrayList<>();
+            commandList.add("su");
+            commandList.add("-c");
+            commandList.add(packageManager + " " + installCmd + " " + packageName);
+            
+            ProcessBuilder pb = new ProcessBuilder(commandList);
+            Process process = pb.start();
             
             String output = readStream(process.getInputStream());
             String error = readStream(process.getErrorStream());
@@ -156,7 +286,8 @@ public class NativeShellPlugin extends Plugin {
     @PluginMethod
     public void checkRootAccess(PluginCall call) {
         try {
-            Process process = Runtime.getRuntime().exec("su -c echo test");
+            ProcessBuilder pb = new ProcessBuilder("su", "-c", "echo test");
+            Process process = pb.start();
             int exitCode = process.waitFor();
             
             JSObject result = new JSObject();
@@ -215,10 +346,32 @@ public class NativeShellPlugin extends Plugin {
             return;
         }
 
+        // Validate URL is HTTPS
+        if (!url.startsWith("https://")) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Only HTTPS URLs are allowed for security");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
+        // Validate destination path doesn't contain path traversal
+        if (destination.contains("..") || destination.contains("~")) {
+            JSObject result = new JSObject();
+            result.put("output", "");
+            result.put("error", "Invalid destination path");
+            result.put("exitCode", 1);
+            call.resolve(result);
+            return;
+        }
+
         try {
             URL downloadUrl = new URL(url);
             HttpURLConnection connection = (HttpURLConnection) downloadUrl.openConnection();
             connection.setRequestMethod("GET");
+            connection.setConnectTimeout(10000);
+            connection.setReadTimeout(10000);
             
             InputStream inputStream = connection.getInputStream();
             FileOutputStream outputStream = new FileOutputStream(destination);
